[package]
name = "filesu-import-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
console = "0.15.7"
csv = "1.2.1"
dotenv = "0.15.0"
indicatif = "0.17.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
regex = "1"